# ARM-Software-SCP-firmware

./: CMakeLists.txt  Makefile.cmake  maintainers.md  user_guide.md
.gitlab/pipelines/: daily-pipeline.yml  deployment-pipeline.yml
.gitlab/templates/: beetle-security-test.yml  build-test.yml  platform-test.yml  scmi-test.yml  test-count.yml  unit-test.yml
arch/arm/aarch64/: CMakeLists.txt
arch/arm/aarch64/include/: arch_helpers.h  arch_reg.h
arch/arm/aarch64/src/: arch_exceptions.S  arch_gic.c
arch/arm/common/src/: arch.ld.S
arch/none/optee/: CMakeLists.txt
cmake/: dts.cmake
doc/: Doxyfile  aarch64.md  device_tree_support.md
dts/bindings/: vendor-prefixes.txt
dts/bindings/i2c/: arm,apb-i2c.yaml
dts/bindings/juno/: arm,juno-debug-scp-mod.yaml  arm,juno-ppu.yaml  arm,juno-rom.yaml  arm,juno-scc.yaml
dts/bindings/scp/: scp,bootloader.yaml  scp,clk-dev.yaml  scp,debug.yaml  scp,gtimer.yaml  scp,mhu.yaml  scp,mock-clock.yaml  scp,mock-psu.yaml  scp,mod-arm-apb-i2c.yaml  scp,mod-arm-pl011.yaml  scp,mod-juno-reset.yaml  scp,pd-mask-table.yaml  scp,power-domain.yaml  scp,reset-domain-config.yaml  scp,reset-domain-elem.yaml  scp,scmi-agent.yaml  scp,scmi-clock-table.yaml  scp,scmi-perf.yaml  scp,scmi-pwr-domain.yaml  scp,scmi-reset-devices.yaml  scp,scmi-service.yaml  scp,scmi-system-power.yaml  scp,scmi.yaml  scp,sds-region.yaml  scp,sds.yaml  scp,sensor.yaml  scp,statistics.yaml  scp,sys-power-dev.yaml  scp,sys-power-table.yaml  scp,system-power.yaml  scp,timer.yaml  scp,transport.yaml
dts/bindings/scp/fwk-ids/: scp,api-id.yaml  scp,elem-id.yaml  scp,mod-id.yaml  scp,notify-id.yaml  scp,sub-elem-id.yaml
dts/bindings/serial/: arm,pl011.yaml
dts/include/: scp-fwk.dtsi
dts/include/juno/: juno-scp-base.dtsi  juno-scp-notification-opts.dtsi  juno-scp-ramfw-base.dtsi  juno-scp-ramfw-board.dtsi  juno-scp-ramfw-fvp.dtsi  juno-scp-romfw-debug-opts.dtsi  juno-scp-romfw.dtsi  juno-scp-scmi-debug-opts.dtsi  juno-scp-scmi-opts.dtsi  juno-scp-scmi-reset-opts.dtsi  juno-scp-scmi.dtsi  juno-scp-sensor-opts.dtsi  juno-soc.dtsi
framework/: CMakeLists.txt
framework/include/: fwk_devicetree.h  fwk_dt_bindings.h  fwk_dt_config_common.h
framework/src/: fwk_module.c
framework/test/: CMakeLists.txt
module/: CMakeLists.txt
module/bootloader/src/: config_dt_bootloader.c
module/ccsm/: CMakeLists.txt
module/ccsm/include/: mod_ccsm.h
module/ccsm/src/: ccsm_drv.c  ccsm_drv.h  mod_ccsm.c
module/ccsm/test/: CMakeLists.txt  fwk_module_idx.h  mod_ccsm_extra.h  mod_ccsm_unit_test.c
module/ccsm/test/mocks/: Mockmod_ccsm_extra.c  Mockmod_ccsm_extra.h
module/config_dt_common/: CMakeLists.txt  config_dt_apb_i2c.c  config_dt_clock.c  config_dt_debug.c  config_dt_gtimer.c  config_dt_mhu.c  config_dt_mock_psu.c  config_dt_pl011.c  config_dt_scmi.c  config_dt_scmi_clock.c  config_dt_scmi_perf.c  config_dt_scmi_reset_domain.c  config_dt_scmi_system_power.c  config_dt_sds.c  config_dt_transport.c
module/debug/: CMakeLists.txt
module/dvfs/src/: mod_dvfs.c
module/dw_apb_i2c/: CMakeLists.txt
module/gtimer/src/: mod_gtimer.c
module/i2c/: CMakeLists.txt
module/i2c/src/: config_dt_i2c.c
module/mhu/: CMakeLists.txt
module/mock_clock/src/: config_dt_mock_clock.c
module/mpmm_v2/src/: mod_mpmm_v2.c
module/noc_s3/src/: noc_s3_discovery.c
module/optee/clock/src/: mod_optee_clock.c
module/perf_controller/include/: mod_perf_controller.h
module/perf_controller/src/: mod_perf_controller.c
module/power_capping/test/: mod_power_capping_unit_test.c
module/power_domain/: CMakeLists.txt
module/power_domain/src/: config_dt_power_domain.c
module/reset_domain/: CMakeLists.txt
module/reset_domain/src/: config_dt_reset_domain.c
module/resource_perms/include/: mod_resource_perms.h
module/scmi/include/: mod_scmi_std.h
module/scmi/src/: mod_scmi.c  mod_scmi_base.c
module/scmi/test/: mod_scmi_extra.h  mod_scmi_unit_test.c
module/scmi_clock/: CMakeLists.txt
module/scmi_clock/include/: mod_scmi_clock.h
module/scmi_clock/include/internal/: scmi_clock.h
module/scmi_clock/src/: mod_scmi_clock.c
module/scmi_clock/test/: CMakeLists.txt  mod_scmi_clock_extra.h  mod_scmi_clock_unit_test.c
module/scmi_perf/: CMakeLists.txt
module/scmi_perf/include/internal/: scmi_perf.h
module/scmi_power_capping/src/: mod_scmi_power_capping.c
module/scmi_power_capping/test/: mod_scmi_power_capping_unit_test.c
module/scmi_power_domain/: CMakeLists.txt
module/scmi_power_domain/src/: config_dt_scmi_power_domain.c
module/scmi_reset_domain/: CMakeLists.txt
module/scmi_sensor_req/src/: mod_scmi_sensor_req.c
module/scmi_system_power/: CMakeLists.txt
module/scmi_system_power/include/: mod_scmi_system_power.h
module/scmi_system_power/src/: mod_scmi_system_power.c
module/sensor/: CMakeLists.txt
module/sensor/src/: config_dt_sensor.c
module/statistics/: CMakeLists.txt
module/statistics/src/: config_dt_stats.c
module/system_power/src/: config_dt_system_power.c
module/timer/src/: config_dt_timer.c
module/transport/: CMakeLists.txt
module/transport/include/: mod_transport.h
module/transport/src/: mod_transport.c
product/automotive-rd/rd1ae/scp_ramfw/: CMakeLists.txt  (+11 more)
product/fvp-baser-aemv8r/fw/: CMakeLists.txt  Firmware.cmake  Toolchain-GNU.cmake  config_armv8r_mpu.c  fvp_baser_aemv8r_mmap.h
product/juno/scp_ramfw/: CMakeLists.txt  Firmware.cmake  config_dt_juno_clock.c  config_dt_juno_sds.c  config_dt_juno_sensor.c  config_sensor.h  juno-scp_ramfw-fvp.dts  juno-scp_ramfw.dts
product/juno/scp_romfw/: CMakeLists.txt  Firmware.cmake  juno-scp_romfw.dts
product/juno/scp_romfw_bypass/: CMakeLists.txt  Firmware.cmake  juno-scp_romfw_bypass.dts
product/optee/common/: CMakeLists.txt
product/totalcompute/common/: config_mhu3.c  config_transport.c
tools/: check_pycodestyle.py  cppcheck_suppress_list.txt  product.py
tools/config/check_build/: default_products_build.yml
tools/config/cppcheck/: cppcheck_suppress_list.txt
tools/dts/: README.txt  dt_gen_config.py  dt_gen_enum_defines.py  scp-dt-build-juno-fw.bash
unit_test/: CMakeLists.txt
(+108 files in other folders)
